# context-compiler

./: .gitignore  LICENSE  README.md  pyproject.toml
context_compiler/: article_builder.py  artifact_writer.py  budgets.py  cli.py  compiler.py  freshness.py  fs_utils.py  instructions.py  language_profiles.py  models.py  relevance.py  scanner.py  tree_sitter_runtime.py
context_compiler/extractors/: __init__.py  components.py  config_refs.py  endpoints.py  frameworks.py  imports.py  models.py  symbols.py
context_compiler/language_packs/: __init__.py  go.py  java.py  python.py  shared.py  typescript.py
context_compiler/script_support/: __init__.py  bash.py  cmd.py  powershell.py
docs/: contributing.md  internals.md
tests/: test_article_builder.py  test_benchmark_value.py  test_budgets.py  test_cli_init.py  test_cli_scan.py  test_compiler.py  test_deep_go.py  test_deep_java.py  test_deep_python.py  test_deep_typescript.py  test_docs.py  test_e2e_workflow.py  test_extractors_domain.py  test_extractors_structure.py  test_freshness.py  test_language_agnostic.py  test_polyglot_deep_support.py  test_scanner.py
tests/fixtures/deep_go_repo/: go.mod
tests/fixtures/deep_java_repo/: pom.xml
tests/fixtures/deep_python_repo/: manage.py
tests/fixtures/deep_ts_repo/: package.json
tests/fixtures/medium_repo/: package.json
tests/fixtures/polyglot_repo/: .gitignore  package.json
tests/fixtures/wiki_repo/: package.json
tests/golden/: medium_repo_architecture.md  medium_repo_overview.md  wiki_repo_domain_auth.md  wiki_repo_index.md
(+60 files in other folders)
