[project]
name = "context-compiler"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "tree-sitter-language-pack>=0.7,<1",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<6",
  "ruff>=0.4,<1",
]

[project.scripts]
context-compiler = "context_compiler.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["context_compiler"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["tests/fixtures", ".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.context-compiler.budgets]
mode = "adaptive"

[tool.context-compiler.budgets.global]
index = 300
overview_min = 600
overview_max = 1000
architecture_min = 900
architecture_max = 1600
routes_min = 1200
routes_max = 2400
schema_min = 900
schema_max = 1800
components_min = 800
components_max = 1600
config_min = 500
config_max = 1000
hot_files_min = 300
hot_files_max = 500

[tool.context-compiler.budgets.articles]
article_min = 700
article_max = 1200
database_min = 800
database_max = 1600
